# ugoira

./: .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  LICENSE  README.rst  pyproject.toml  setup.py
.github/workflows/: release.yml  test.yml
docs/: Makefile  changelog.rst  conf.py  index.rst  install.rst  make.bat  ugoira.rst  usage.rst
docs/source/: api.rst  changelog.rst  conf.py  install.rst  usage.rst
docs/source/ugoira/: lib.rst
docs/ugoira/: cli.rst  lib.rst
tests/: cli_test.py  conftest.py  lib_test.py
tests/mock/: login_page.html  non_ugoira.html  ugoira.html
ugoira/: __init__.py  cli.py  lib.py
