[tool.poetry]
name = "ugoira"
version = "0.8.0"
description = "ugoira for download pixiv ugoira images"
authors = ["Kim Jin Su <item4_hun@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
fake-useragent = "^0.1.11"
apng = {version = "^0.3.4", optional=true}
Pillow = ">=8.0.1,<10.0.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pytest-cov = "^2.10.1"
responses = "^0.12.1"
flake8 = "^3.8.4"
flake8-import-order = "^0.18.1"
Sphinx = "^3.4.1"

[tool.poetry.extras]
apng = ["apng"]

[tool.poetry.scripts]
ugoira = "ugoira.cli:ugoira"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
