[tool.black]
line-length = 80
preview = true


[tool.ruff]
line-length = 120
target-version = "py311"
select = [
    # Pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # isort
    "I",
    # pyupgrade
    "UP",
    # flake8-2020
    "YTT",
    # flake8-async
    "ASYNC",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-commas
    "COM",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-future-annotations
    "FA",
    # flake8-implicit-str-concat
    "ISC",
    # flake8-pie
    "PIE",
    # flake8-pyi
    "PYI",
    # flake8-pytest-style
    "PT",
    # flake8-quotes
    "Q",
    # flake8-raise
    "RSE",
    # flake8-return
    "RET",
    # flake8-simplify
    "SIM",
    # flake8-use-pathlib
    "PTH",
    # Pylint
    "PLE",
    "PLR0133",
    "PLR0206",
    "PLR0402",
    "PLR1701",
    "PLR1711",
    "PLR1722",
    "PLR5501",
    "PLW",
    # tryceratops
    "TRY",
    # flynt
    "FLY",
    # Ruff-specific rules
    "RUF",
]
ignore = [
    # flake8-async
    "ASYNC102",  # Checks that async functions do not contain calls to blocking synchronous process calls via the os module.
    # flake8-bandit
    "S311",  # Standard pseudo-random generators are not suitable for cryptographic purposes
    # flake8-pytest-style
    "PT011",  # pytest.raises({exception}) is too broad, set the match parameter or use a more specific exception
    # tryceratops
    "TRY003",  # Avoid specifying long messages outside the exception class
    "TRY301",  # Abstract raise to an inner function
]
[tool.ruff.per-file-ignores]
"tests/*" = [
    # flake8-bandit
    "S101",  # Use of assert detected
]

[tool.ruff.isort]
force-single-line = true  # 한 줄 당 1개의 import 문
order-by-type = false  # 모두 대문자인 요소를 우선정렬하는 부분 비활성화
case-sensitive = true  # 대소문자 구분을 켜야 대문자 요소가 우선정렬됨
known-first-party = ["ugoira"]
section-order = ["future", "standard-library", "third-party", "tests", "first-party", "local-folder"]

[tool.ruff.isort.sections]
tests = ["tests"]

[tool.poetry]
name = "ugoira"
version = "0.9.0"
description = "ugoira for download pixiv ugoira images"
authors = ["Kim, Jin Su <item4@localhost.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/item4/ugoira"
documentation = "https://ugoira.readthedocs.io"
packages = [
    { include = "ugoira" },
]

[tool.poetry.group.main.dependencies]
python = ">=3.11,<3.12"
click = "^8.1.7"
fake-useragent = "^1.3.0"
Pillow = "^10.1.0"
httpx = "^0.25.0"

[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
ruff= "^0.1.1"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pytest-httpx = "^0.26.0"
Sphinx = "^7.2.6"
apng = "^0.3.4"

[tool.poetry.scripts]
ugoira = "ugoira.cli:ugoira"

[tool.poetry.dependencies]
[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
